<resources>
    <string name="app_name">Templelinks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="live">Live</string>
    <string name="gallery">Gallery</string>
    <string name="account">Account</string>
    <string name="live_stream">Live Stream</string>
    <string name="my_account">My Account</string>
    <string name="see_more">See More</string>
    <string name="nothing_in_favourite">Nothing in Favourite</string>
    <string name="puja_booking">Puja Booking</string>
    <string name="prasad">Prasad</string>
    <string name="donation">Donation</string>
    <string name="virtual_queue">Virtual Queue</string>
    <string name="no_temple">No Temple Found</string>
    <string name="select_deity">Select Deity</string>
    <string name="pooja_price">$ %d</string>
    <string name="pooja_price_s">$ %s</string>
    <string name="gst_percentage">%s %%</string>
    <string name="select_date">Select Date</string>
    <string name="book">Book</string>
    <string name="cancel">Cancel</string>
    <string name="pooja_booking">Pooja Booking</string>
    <string name="select_puja">Select Puja</string>
    <string name="select_time_schedule">Select Time Schedule</string>
    <string name="add_member">Add Member</string>
    <string name="select">Select</string>
    <string name="select_family_member">Select Family Member</string>
    <string name="morning">Morning</string>
    <string name="pujas">Pujas</string>
    <string name="puja_booking_count">%d</string>
    <string name="sub_total">Sub Total</string>
    <string name="banking_charges">Banking Charges</string>
    <string name="gst">GST</string>
    <string name="total_amount">Total Amount</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="_100_0">100.0</string>
    <string name="_500_0">500.0</string>
    <string name="_1000">1000.0</string>

    <string-array name="gods_photo">
        <item>"https://www.hindisoch.com/wp-content/uploads/2015/03/Lord-Ganesha-Wallpaper.jpg"</item>
        <item>"https://www.hindisoch.com/wp-content/uploads/2015/03/Lord-Ganesha-Wallpaper.jpg"</item>
        <item>"https://www.hindisoch.com/wp-content/uploads/2015/03/Lord-Ganesha-Wallpaper.jpg"</item>
        <item>"https://www.hindisoch.com/wp-content/uploads/2015/03/Lord-Ganesha-Wallpaper.jpg"</item>
        <item>"https://www.hindisoch.com/wp-content/uploads/2015/03/Lord-Ganesha-Wallpaper.jpg"</item>
        <item>"https://www.hindisoch.com/wp-content/uploads/2015/03/Lord-Ganesha-Wallpaper.jpg"</item>
        <item>"https://www.nicepng.com/png/detail/253-2538627_lord-murugan-png-murugan-god-images-png.png"</item>
        <item>"https://www.nicepng.com/png/detail/253-2538627_lord-murugan-png-murugan-god-images-png.png"</item>
        <item>"https://www.nicepng.com/png/detail/253-2538627_lord-murugan-png-murugan-god-images-png.png"</item>
        <item>"https://www.nicepng.com/png/detail/253-2538627_lord-murugan-png-murugan-god-images-png.png"</item>
    </string-array>

    <string-array name="time_schedule_dropdown">
        <item>Morning</item>
        <item>Evening</item>
    </string-array>

    <string-array name="button_text">
        <item>"Deities"</item>
        <item>"Temples"</item>
        <item>"Sainath Menon Photography"</item>
        <item>"Button4"</item>
        <item>"Button5"</item>
        <item>"Button6"</item>
        <item>"Button7"</item>
        <item>"Button8"</item>
        <item>"Button3"</item>
    </string-array>

</resources>