<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.pujabookingFragment.finalBookingFragment.FinalBokingFragment">

    <include
        android:id="@+id/toolBarFinalPujaBooking"
        layout="@layout/tool_bar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollViewBooking"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@id/tvSubTotal"
        app:layout_constraintTop_toBottomOf="@id/toolBarFinalPujaBooking">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTempleNameFinalBooking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="TextView"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTempleAddressFinalBooking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/ivAddres"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTempleNameFinalBooking" />

            <ImageView
                android:id="@+id/ivAddres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:src="@drawable/ic_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPooja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:text="@string/pujas"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTempleAddressFinalBooking" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvConfirmPooja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                android:paddingTop="@dimen/margin_normal"
                android:paddingBottom="@dimen/margin_normal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/tvPooja"
                tools:listitem="@layout/confirm_puja_list_item" />

            <TextView
                android:id="@+id/tvDonation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/donation"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvConfirmPooja">
            </TextView>

            <EditText
                android:id="@+id/etDonation"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:hint="@string/donation"
                app:layout_constraintTop_toBottomOf="@id/tvDonation">
            </EditText>

            <Button
                android:id="@+id/btnDonation100"
                android:layout_width="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/_100_0"
                app:layout_constraintEnd_toStartOf="@+id/btnDonation500"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etDonation">
            </Button>

            <Button
                android:id="@+id/btnDonation500"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/_500_0"
                app:layout_constraintEnd_toStartOf="@+id/btnDonation1000"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnDonation100"
                app:layout_constraintTop_toBottomOf="@id/etDonation">
            </Button>

            <Button
                android:id="@+id/btnDonation1000"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/_100_0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnDonation500"
                app:layout_constraintTop_toBottomOf="@id/etDonation">
            </Button>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btnConfirmCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_large"
        android:backgroundTint="@color/dark_grey"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnConfirmBook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnConfirmBook"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:backgroundTint="@color/app_color"
        android:text="@string/book"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnConfirmCancel" />


    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:text="@string/total_amount"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirmCancel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvGST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/gst"
        app:layout_constraintBottom_toTopOf="@+id/tvTotal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBankCharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banking_charges"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@+id/tvGST"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_total"
        android:layout_marginBottom="@dimen/margin_normal"

        android:layout_marginStart="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@+id/tvBankCharge"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:text="@string/pooja_price_float"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirmBook"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvGSTAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:textAlignment="textEnd"
        android:text="@string/pooja_price_float"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalAmount"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvBankingAmount"
        android:layout_width="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:text="@string/pooja_price_float"
        app:layout_constraintBottom_toTopOf="@+id/tvGSTAmount"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSubTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/puja_booking_count"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/tvBankingAmount"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>