<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/corner_radius"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.pujabookingFragment.familyMemberDialogueFragment.FamilyMemberDialogueFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvSelectFamilyMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/select_family_member"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFamilyMembers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_large"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_large"
            app:layout_constraintBottom_toTopOf="@+id/tlTimeSchedule"
            app:layout_constraintTop_toBottomOf="@id/tvSelectFamilyMember"
            tools:layout_editor_absoluteX="16dp"
            tools:listitem="@layout/family_member_list_item" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlTimeSchedule"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:hint="@string/select_time_schedule"
            app:layout_constraintBottom_toTopOf="@id/btnAddMember">

            <AutoCompleteTextView
                android:id="@+id/etTimeSchedule"
                android:text="@string/morning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:inputType="none">
            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddMember"
            style="@style/buttonStyle"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_xxLarge"
            android:background="@drawable/button_background_normal"
            android:text="@string/add_member"
            android:textColor="@color/app_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSelect"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSelect"
            style="@style/buttonStyle"
            android:layout_marginBottom="@dimen/margin_xxLarge"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:background="@drawable/button_background_pink"
            android:textColor="@color/white"
            android:text="@string/select"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnAddMember" />

        <ImageView
            android:id="@+id/ivExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:src="@drawable/ic_exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLoading"
            android:visibility="visible"
            android:layout_width="@dimen/margin_xxLarge"
            android:layout_height="@dimen/margin_xxLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>