<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_color"
    tools:context=".ui.fragment.pujabookingfragment.PujaBookingFragment">

    <include
        android:id="@+id/toolBarPujaBooking"
        layout="@layout/tool_bar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollViewBooking"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@id/tvPoojaDate"
        app:layout_constraintTop_toBottomOf="@id/toolBarPujaBooking">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTempleNamePujaBooking"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="TextView"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/ivAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTempleAddressPujaBooking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/ivAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTempleNamePujaBooking" />

            <ImageView
                android:id="@+id/ivAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:src="@drawable/ic_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSelectDeity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:text="@string/select_deity"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTempleAddressPujaBooking" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDeitiesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="@dimen/margin_normal"
                android:paddingEnd="@dimen/margin_normal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/tvSelectDeity"
                tools:listitem="@layout/button_list_item" />

            <TextView
                android:id="@+id/tvSelectPooja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/select_puja"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvDeitiesButton" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPujas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/pooja_booking_button_list_item"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@+id/tvSelectPooja"
                tools:layout_editor_absoluteX="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tvPoojaDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@+id/includePoojaBooking"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/includePoojaBooking"
        layout="@layout/pooja_booking_date_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        tools:layout_editor_absoluteX="16dp">
    </include>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:backgroundTint="@color/dark_grey"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBook"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:backgroundTint="@color/app_color"
        android:text="@string/book"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCancel" />


</androidx.constraintlayout.widget.ConstraintLayout>